[package]
name = "ruft"
version = "0.1.0"
authors = ["Andrea <a.g.baldan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde = { version = "1.0" }
tarpc = { version = "0.25", features = ["full"] }
tokio = { version = "1.4.0", features = ["full"] }
rand = "0.8.3"
