[package]
name = "ruft"
version = "0.1.0"
authors = ["Andrea <a.g.baldan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.4.0", features = ["full"] }
tokio-util = { version = "0.6.5", features = ["codec"] }
tokio-stream = { version = "0.1" }
tokio-retry = "0.3.0"
bincode = "1.3.2"
bytes = "1.0.1"
log = { version = "0.4.11", features = ["std"] }
simplelog = "0.10"
